syntax = "proto2";

package lego.nat.protobuf;

message DetectionRequest {
	optional bytes public_ip = 1;
    optional int32 public_port = 2;
    optional bytes local_ip = 3;
    optional int32 local_port = 4;
    optional bytes id = 5;
    optional int32 nat_type = 6;
    optional bytes dht_key = 7;
}

message NatMessage {
	optional DetectionRequest detection_req = 1;
}